# ChatBMW

./: .gitignore  Deep_Analysis.md  README.md  README_DesignChoices.md  REAMDE_Results_Summary.md  Stretch_Version.md  pyproject.toml
chatbmw/: __init__.py
chatbmw/data/: __init__.py  cleaner.py  processor.py
chatbmw/model/: METRICS_README.md  __init__.py  evaluator.py  train_config.yaml  trainer.py
chatbmw/scraper/: __init__.py  __main__.py  cleaner.py  cli.py  client.py  config.py  config.yaml  incremental.py  parser.py  schemas.py  scraper.py
datasets/: bmw_qa_evaluation_set.json
datasets/chat_data_1000/: test_chat.jsonl  val_chat.jsonl
datasets/chat_data_1500/: test_chat.jsonl  val_chat.jsonl
datasets/chat_data_500/: test_chat.jsonl  val_chat.jsonl
datasets/clean_data/: bmw_articles_20251230_141305_500articles_clean.jsonl
datasets/raw_data/: bmw_articles_20251230_135814_100articles.json  bmw_articles_20251230_135814_100articles.jsonl  bmw_articles_20251230_141305_500articles.json  bmw_articles_20251230_141305_500articles.jsonl
notebooks/: 1.Data_Process.ipynb  2.Finetune_Llama-3.2-1B.ipynb  3.Evaulate_Llama-3.2-1B.ipynb  4.Upload_Llama-3.2-1B.ipynb  5.Stretch_version_finetune.ipynb  6.Stretch_version_evaulate.ipynb  7.QandA_evaluation.ipynb
results/: combined_4models_comparison.csv  evaluation_metrics.json  model_comparison.csv  qa_evaluation_comparison.csv
